Fixed 'no results' image size on small devices

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -116,3 +116,9 @@
 .noResults {
   text-align: center;
 }
+
+@media (max-width: 550px) {
+  .noResults img {
+    width: 100%;
+  }
+}
